--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 </head>
 <body style="width: 100vw; height: 100vh; margin: 0; padding: 0">
 <span id='loader' style="visibility: hidden; font-size: 40px; left: 50%; top:50%; transform: translate(-50%,-50%); position: absolute;">Loading</span>
-    <script src="/bundle.js"></script>
+    <script src="https://testrr12.github.io/testvuforia/bundle.js"></script>
 </body>
 </html>
 
