--- a/index.html
+++ b/index.html
@@ -10,9 +10,31 @@
     <meta name="msapplication-navbutton-color" content="#324d59">
     <meta name="apple-mobile-web-app-status-bar-style" content="#324d59">
 </head>
-<body style="width: 100vw; height: 100vh; margin: 0; padding: 0">
+<body style="width: 100vw; height: 100vh; margin: 0; padding: 0; overflow: hidden">
+
+    <!--<iframe id="container" src="https://www.google.com/maps/embed?pb=!1m16!1m12!1m3!1d2965.0824050173574!2d-93.63905729999999!3d41.998507000000004!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!2m1!1sWebFilings%2C+University+Boulevard%2C+Ames%2C+IA!5e0!3m2!1sen!2sus!4v1390839289319" width="100%" height="100%" frameborder="0" style="border:0"></iframe>-->
 <span id='loader' style="visibility: hidden; font-size: 40px; left: 50%; top:50%; transform: translate(-50%,-50%); position: absolute;">Loading</span>
-    <script src="https://testrr12.github.io/testvuforia/bundle.js"></script>
+<!--<div id='logger' style="font-size: 10px; left: 0%; top:0%; right: 0%; height: 25vh; overflow: auto; position: absolute; color: white; background: black"></div>-->
+
+    <script src="/bundle.js"/>
+    <!--<script>-->
+        <!--window.loadBundle = function (url) {-->
+
+            <!--alert("Requested: " + url);-->
+            <!--script = document.createElement('script');-->
+            <!--script.onload = function() {-->
+                <!--alert("Script loaded and ready");-->
+            <!--};-->
+            <!--script.src = url;-->
+            <!--document.body.appendChild(script);-->
+
+
+            <!--// var html = [-->
+            <!--//     '<script src="' + url + '" />',-->
+            <!--// ].join('\n');-->
+            <!--// document.body.innerHTML = html;-->
+        <!--};-->
+    <!--</script>-->
 </body>
 </html>
 
